--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Twitter Timeout Redirect",
+  "name": "x Timeout Redirect",
   "version": "1.0",
-  "description": "Closes Twitter after 30 minutes and opens LeetCode.",
+  "description": "Closes x after 30 minutes and opens LeetCode.",
   "permissions": [
     "tabs", 
     "activeTab", 
@@ -10,7 +10,7 @@
     "storage"
   ],
   "host_permissions": [
-    "https://twitter.com/*",
+    "https://x.com/*",
     "https://leetcode.com/*",
     "https://www.leetcode.com/*"
   ],
