--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,7 @@
   "description": "Closes x after 15 minutes and opens LeetCode.",
   "permissions": [
     "tabs", 
-    "activeTab", 
-    "alarms",
-    "storage"
+    "alarms"
   ],
   "host_permissions": [
     "https://x.com/*",
